# AutoML-Pipe

./: .gitignore  AutoMLPipe-BC-Notebook.ipynb  FeatureImportanceJob.py  ModelJob.py  pyproject.toml  scoring_curve.py
