[tool.poetry]
name = "automlpipe"
version = "0.1.0"
description = "ML Pipeline with Scikit"
authors = ["Corentin Meyer <corentin.meyer@etu.unistra.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
skrebate = "^0"
xgboost = "^1"
lightgbm = "^3"
optuna = "^2"
scikit-eLCS = "^1"
scikit-XCS = "^1"
scikit-ExSTraCS = "^1"
plotly = "^5"
pylint = "*"
black = "*"
ipykernel = "^6"
matplotlib = "^3"
seaborn = "^0"
ipywidgets = "^7"
widgetsnbextension = "^3"
kaleido = "0.2.1"
fpdf = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
